# pytest

./: .flake8  .gitignore  aaa.py  msg.md  pyproject.toml  pytest.ini
.github/workflows/: publish-to-pypi.yaml
src/pytest_result_sender/: plugin.py
tests/: test_ini.py
