[project]
name = "pytest-result-sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Amazing", email = "1569678894@qq.com"},
]
dependencies = [
    "pytest>=8.3.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.entry-points."pytest11"]
result_log = "pytest_result_sender.plugin"

[tool.pdm.src]
pakege-dir = "src"